# bingit

./: Cargo.toml  README.md
docs/: 2026-07-14_火山引擎模型对接.md
docs/superpowers/specs/: 2026-07-08-bingit-design.md
src/: ai.rs  cli.rs  config.rs  git.rs  main.rs  proxy.rs  token_logging.rs
